--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <title>CommunityRust</title>
+    <link rel="icon" href="logo.ico">
     <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <header>
