--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>CommunityRust</title>
-    <link rel="icon" href="logo.ico">
     <link rel="stylesheet" href="index.css">
+    <link rel= "shortcut icon" href="radio.png">
     
 </head>
 <body>
