--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>CommunityRust</title>
     <link rel="stylesheet" href="index.css">
-    <link rel= "shortcut icon" href="radio.png">
+    <link rel="SHORTCUT ICON" type="chliz" href="http://i.imgur.com/ATn9J.jpg">
     
 </head>
 <body>
